# prompt-guardian

./: .gitignore  README.md  ecosystem.config.js  flake.nix  makefile  package.json  pnpm-lock.yaml
app/client/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/client/src/: App.tsx
app/server/: main.py  pyproject.toml
